--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,12 +46,12 @@ file(GLOB all_SRCS "src/GPU/*" "src/CPU/*" "src/png/*" "src/GPU-CudaStream/*" "s
 
 add_executable(harris src/mandel.cpp ${all_SRCS})
 target_compile_features(harris PUBLIC cxx_std_17)
-target_link_libraries(harris PRIVATE ${PNG_LIBRARY} CLI11::CLI11 spdlog::spdlog)# renderer)
+target_link_libraries(harris PRIVATE ${PNG_LIBRARY} CLI11::CLI11 spdlog::spdlog)
 set_target_properties(harris PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
 add_executable(bench src/bench.cpp ${all_SRCS})
 target_compile_features(bench PUBLIC cxx_std_17)
-target_link_libraries(bench PRIVATE ${PNG_LIBRARY} spdlog::spdlog benchmark::benchmark)# renderer)
+target_link_libraries(bench PRIVATE ${PNG_LIBRARY} spdlog::spdlog benchmark::benchmark)
 set_target_properties(bench PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
 
